--- a/Views/template/header.phtml
+++ b/Views/template/header.phtml
@@ -33,7 +33,9 @@
         <div id="menu" class="col-xs-6 col-sm-3 col-md-2">
         <ul class="nav navbar_default nav-stacked">
             <li><a href="index.php">Home</a></li>
+            <li><a href="login.php">Log In</a></li>
             <li><a href="register.php">Register</a></li>
+
         </ul>
        </div>
 
