pdo works and can add users

--- a/Views/register.phtml
+++ b/Views/register.phtml
@@ -1,5 +1,5 @@
 <?php require('template/header.phtml') ?>
-<body>
+
     <div>
         <h3>Register Here</h3>
         <form name="registerForm" method="post" action="register.php">
@@ -18,11 +18,10 @@
             <label>Phone Number: </label>
             <input type="text" name="phone">
             <br/>
-            <input type="submit" name="Submit" value-="Submit">
-            <input type="reset" name="Reset" value-="Reset">
+            <input type="submit" name="Submit" value="Submit">
+            <input type="reset" name="Reset" value="Reset">
         </form>
     </div>
-</body>
 
 
 <?php require('template/footer.phtml') ?>
