attempt at login

--- a/Views/login.phtml
+++ b/Views/login.phtml
@@ -1,7 +1,7 @@
 <?php require('template/header.phtml') ?>
     <body>
     <div>
-        <h3>Register Here</h3>
+        <h3>Log In</h3>
         <form name="loginForm" method="post" action="login.php">
             <label>Email: </label>
             <input type="text" name="email">
