--- a/Views/template/header.phtml
+++ b/Views/template/header.phtml
@@ -35,6 +35,7 @@
             <li><a href="index.php">Home</a></li>
             <li><a href="login.php">Log In</a></li>
             <li><a href="register.php">Register</a></li>
+            <li><a href="allCDs.php">All Cds</a></li>
 
         </ul>
        </div>
