session works properly, need to be logged in to see the rent button, search for  cd name works but has to be specific

--- a/Views/searchCD.phtml
+++ b/Views/searchCD.phtml
@@ -1,6 +1,12 @@
 <?php require ('template/header.phtml') ?>
 
-    <h1>All CD's</h1>
+    <h1>Search CD</h1>
+    <form name="searchForm" method="post" action="searchCD.php">
+        <label>Search </label>
+        <br/>
+        <input type="submit" name="Submit" value="Submit">
+        <input type="text" name="searchInput">
+    </form>
     <table style="100%">
         <tr>
             <th></th>
@@ -24,9 +30,9 @@
                 <td><?php if ($CD['status'] == 0) echo 'Available'; else echo 'Rented'; ?></td>
                 <td><?php echo $CD['CDid']; ?></td>
                 <?php if (isset($_SESSION['userID'])) { ?>
-                <td><a href="selectedCD.php?id=<?php echo $CD['CDid']; ?>" class="button">Rent</a></td>
+                    <td><a href="selectedCD.php?id=<?php echo $CD['CDid']; ?>" class="button">Rent</a></td>
                 <?php } else {?>
-                <td> please log in to rent</td>
+                    <td> please log in to rent</td>
                 <?php } ?>
             </tr>
 
