--- a/Views/selectedCD.phtml
+++ b/Views/selectedCD.phtml
@@ -13,7 +13,26 @@
             <th>CD ID</th>
 
         </tr>
+        <?php foreach ($view->CDs as $CD) { ?>
 
+            <tr>
+                <td><img src="images/<?php echo $CD['image']; ?>" alt="Cover" style="width:140px;height:180px;"></td>
+                <td><?php echo $CD['title']; ?></td>
+                <td><?php echo $CD['artist']; ?></td>
+                <td><?php echo $CD['release']; ?></td>
+                <td><?php echo $CD['genre']; ?></td>
+                <td><?php echo $CD['price']; ?></td>
+                <td><?php if ($CD['status'] == 0) echo 'Available'; else echo 'Rented'; ?></td>
+                <td><?php echo $CD['CDid']; ?></td>
+                <?php if($CD['status'] == 0){ ?>
+                    <td>  </td>
+                <?php } else {?>
+                    <td> CANNOT RENT </td>
+                <?php }?>
+
+            </tr>
+
+        <?php } ?>
 
     </table>
 
