--- a/Views/searchGenre.phtml
+++ b/Views/searchGenre.phtml
@@ -1,7 +1,7 @@
 <?php require ('template/header.phtml') ?>
 
-    <h1>Search CD</h1>
-    <form name="searchForm" method="post" action="searchCD.php">
+    <h1>Search Genre</h1>
+    <form name="searchForm" method="post" action="searchGenre.php">
         <label>Search </label>
         <br/>
         <input type="submit" name="Submit" value="Submit">
