--- a/Views/template/footer.phtml
+++ b/Views/template/footer.phtml
@@ -3,7 +3,13 @@
 
     <div class-"row">
         <div id="footer" class="col-xs-12">
-            <p>Web-site development using the MVC design pattern and the Bootstrap CSS framework</p>
+            <?php if (isset($_SESSION['userID'])) { ?>
+
+                <li> logged in as : <?php echo ($_SESSION['email']) ?></li>
+            <?php } else {?>
+                <li><a href="login.php">Log In</a></li>
+
+            <?php } ?>
         </div>
     </div>
 <!-- Bootstrap core JavaScript
