--- a/Views/template/header.phtml
+++ b/Views/template/header.phtml
@@ -33,16 +33,19 @@
     <div class="row">
         <div id="menu" class="col-xs-6 col-sm-3 col-md-2">
         <ul class="nav navbar_default nav-stacked">
-            <li><a href="index.php">Home</a></li>
-            <li><a href="allCDs.php">All Cds</a></li>
-            <li><a href="searchCD.php">Search CD</a></li>
             <?php if (isset($_SESSION['userID'])) { ?>
                 <li><a href="logout.php">Logout</a></li>
-                <li><?php echo ($_SESSION['userID']) ?></li>
+
             <?php } else {?>
                 <li><a href="login.php">Log In</a></li>
                 <li><a href="register.php">Register</a></li>
             <?php } ?>
+            <li><a href="index.php">Home</a></li>
+            <li><a href="allCDs.php">All Cds</a></li>
+            <li><a href="searchTitle.php">Search Title</a></li>
+            <li><a href="searchArtist.php">Search Artist</a></li>
+            <li><a href="searchGenre.php">Search Genre</a></li>
+
 
         </ul>
        </div>
