--- a/Views/selectedCD.phtml
+++ b/Views/selectedCD.phtml
@@ -25,7 +25,7 @@
                 <td><?php if ($CD['status'] == 0) echo 'Available'; else echo 'Rented'; ?></td>
                 <td><?php echo $CD['CDid']; ?></td>
                 <?php if($CD['status'] == 0){ ?>
-                    <td>  </td>
+                    <td><a href="basket.php?add=<?php echo $CD['CDid']; ?>" class="button">ADD BASKET</a></td>
                 <?php } else {?>
                     <td> CANNOT RENT </td>
                 <?php }?>
