--- a/Views/template/header.phtml
+++ b/Views/template/header.phtml
@@ -35,10 +35,12 @@
         <ul class="nav navbar_default nav-stacked">
             <?php if (isset($_SESSION['userID'])) { ?>
                 <li><a href="logout.php">Logout</a></li>
+                <li><a href="basket.php">Basket</a></li>
 
             <?php } else {?>
                 <li><a href="login.php">Log In</a></li>
                 <li><a href="register.php">Register</a></li>
+
             <?php } ?>
             <li><a href="index.php">Home</a></li>
             <li><a href="allCDs.php">All Cds</a></li>
